# baidupan-cli

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.codewhale/: instructions.md
.github/workflows/: ci.yml  release-client.yml
scripts/: release-client-local.sh  verify-release-version.sh
src/: api.rs  auth.rs  batch.rs  cli.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  transfer.rs
tests/: cli.rs
