[package]
name = "baidupan-cli"
version = "0.1.0"
edition = "2021"
description = "A terminal Baidu Netdisk client powered by Baidu Pan Open Platform APIs."
license = "MIT"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "5"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.17"
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
